k8s/ext-authz/service-client-credentials.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-authz-service-cc
  namespace: gekko
spec:
  selector:
    app: ext-authz-service-cc
  ports:
    - name: http
      port: 8080
      targetPort: http
